# Self-Driving-and-ROS-Learn-by-Doing-Odometry-Control

./: .gitignore  README.md
Docker/: Dockerfile
Section10_Probability-for-Robotics/bumperbot_ws/src/bumperbot_controller/: package.xml
Section10_Probability-for-Robotics/bumperbot_ws/src/bumperbot_controller/launch/: controller.launch  joystick_teleop.launch
Section10_Probability-for-Robotics/bumperbot_ws/src/bumperbot_controller/nodes/: noisy_controller_node.cpp  simple_controller_node.cpp
Section10_Probability-for-Robotics/bumperbot_ws/src/bumperbot_controller/src/: noisy_controller.cpp
Section10_Probability-for-Robotics/bumperbot_ws/src/bumperbot_examples/include/bumperbot_examples/: turtlesim_kinematics.h
Section10_Probability-for-Robotics/bumperbot_ws/src/bumperbot_examples/nodes/: simple_service_server.py  tf_examples_node.cpp
Section10_Probability-for-Robotics/bumperbot_ws/src/bumperbot_examples/src/: turtlesim_kinematics.cpp
Section10_Probability-for-Robotics/bumperbot_ws/src/bumperbot_examples/src/bumperbot_examples/: turtlesim_kinematics.py
Section11_Sensor-Fusion/bumperbot_ws/src/bumperbot_controller/: CMakeLists.txt  package.xml  setup.py
Section11_Sensor-Fusion/bumperbot_ws/src/bumperbot_controller/config/: simple_controller.yaml
Section11_Sensor-Fusion/bumperbot_ws/src/bumperbot_controller/include/bumperbot_controller/: noisy_controller.h  simple_controller.h
Section11_Sensor-Fusion/bumperbot_ws/src/bumperbot_controller/nodes/: noisy_controller_node.py  simple_controller_node.py
Section11_Sensor-Fusion/bumperbot_ws/src/bumperbot_controller/src/: noisy_controller.cpp  simple_controller.cpp
Section11_Sensor-Fusion/bumperbot_ws/src/bumperbot_controller/src/bumperbot_controller/: noisy_controller.py
Section11_Sensor-Fusion/bumperbot_ws/src/bumperbot_description/launch/: gazebo.launch
Section11_Sensor-Fusion/bumperbot_ws/src/bumperbot_description/urdf/: bumperbot.urdf.xacro  bumperbot_gazebo.xacro
Section11_Sensor-Fusion/bumperbot_ws/src/bumperbot_examples/: CMakeLists.txt  setup.py
Section11_Sensor-Fusion/bumperbot_ws/src/bumperbot_examples/nodes/: simple_service_client.py  simple_subscriber.py  simple_timer.cpp  tf_examples_node.py  turtlesim_kinematics_node.py
Section11_Sensor-Fusion/bumperbot_ws/src/bumperbot_localization/: CMakeLists.txt  package.xml  setup.py
Section11_Sensor-Fusion/bumperbot_ws/src/bumperbot_localization/config/: ekf.yaml
Section11_Sensor-Fusion/bumperbot_ws/src/bumperbot_localization/include/bumperbot_localization/: kalman_filter.h
Section11_Sensor-Fusion/bumperbot_ws/src/bumperbot_localization/launch/: local_localization.launch
Section11_Sensor-Fusion/bumperbot_ws/src/bumperbot_localization/nodes/: imu_republisher_node.cpp  imu_republisher_node.py  kalman_filter_node.cpp  kalman_filter_node.py
Section11_Sensor-Fusion/bumperbot_ws/src/bumperbot_localization/src/: kalman_filter.cpp
Section11_Sensor-Fusion/bumperbot_ws/src/bumperbot_localization/src/bumperbot_localization/: kalman_filter.py
Section3_ROS-Introduction/bumperbot_ws/src/bumperbot_examples/: CMakeLists.txt
Section3_ROS-Introduction/bumperbot_ws/src/bumperbot_examples/nodes/: simple_publisher.cpp  simple_py_subscriber  simple_subscriber.cpp
Section4_Locomotion/bumperbot_ws/src/bumperbot_description/: CMakeLists.txt
Section4_Locomotion/bumperbot_ws/src/bumperbot_description/urdf/: bumperbot.urdf.xacro  bumperbot_gazebo.xacro
Section4_Locomotion/bumperbot_ws/src/bumperbot_examples/: package.xml
Section5_Control/bumperbot_ws/src/bumperbot_controller/launch/: controller.launch
Section5_Control/bumperbot_ws/src/bumperbot_examples/: CMakeLists.txt
Section5_Kinematics/bumperbot_ws/src/bumperbot_examples/: CMakeLists.txt  package.xml
Section6_Kinematics/bumperbot_ws/src/bumperbot_controller/: CMakeLists.txt  package.xml
Section6_Kinematics/bumperbot_ws/src/bumperbot_examples/nodes/: simple_publisher.py
Section7_Differential-Kinematics/bumperbot_ws/src/bumperbot_controller/: CMakeLists.txt  package.xml
Section7_Differential-Kinematics/bumperbot_ws/src/bumperbot_controller/config/: diff_drive_controller.yaml
Section7_Differential-Kinematics/bumperbot_ws/src/bumperbot_controller/include/bumperbot_controller/: simple_controller.h
Section7_Differential-Kinematics/bumperbot_ws/src/bumperbot_controller/launch/: controller.launch
Section7_Differential-Kinematics/bumperbot_ws/src/bumperbot_controller/src/: simple_controller.cpp
Section7_Differential-Kinematics/bumperbot_ws/src/bumperbot_controller/src/bumperbot_controller/: simple_controller.py
Section7_Differential-Kinematics/bumperbot_ws/src/bumperbot_description/launch/: display.launch
Section7_Differential-Kinematics/bumperbot_ws/src/bumperbot_description/urdf/: bumperbot.urdf.xacro  bumperbot_gazebo.xacro
Section8_TF-Library/bumperbot_ws/src/bumperbot_controller/: package.xml
Section8_TF-Library/bumperbot_ws/src/bumperbot_controller/launch/: controller.launch
Section8_TF-Library/bumperbot_ws/src/bumperbot_description/: package.xml
Section8_TF-Library/bumperbot_ws/src/bumperbot_description/config/: display.rviz
Section8_TF-Library/bumperbot_ws/src/bumperbot_examples/: CMakeLists.txt
Section8_TF-Library/bumperbot_ws/src/bumperbot_examples/include/bumperbot_examples/: tf_examples.h
Section8_TF-Library/bumperbot_ws/src/bumperbot_examples/nodes/: simple_service_client.cpp  simple_service_server.cpp  turtlesim_kinematics_node.cpp
Section8_TF-Library/bumperbot_ws/src/bumperbot_examples/src/: tf_examples.cpp
Section9_Odometry/bumperbot_ws/src/bumperbot_controller/: CMakeLists.txt  package.xml
Section9_Odometry/bumperbot_ws/src/bumperbot_controller/config/: joystick.yaml
Section9_Odometry/bumperbot_ws/src/bumperbot_controller/src/: simple_controller.cpp
Section9_Odometry/bumperbot_ws/src/bumperbot_examples/: package.xml
Section9_Odometry/bumperbot_ws/src/bumperbot_examples/nodes/: simple_subscriber.cpp  simple_timer.py
Section9_Odometry/bumperbot_ws/src/bumperbot_examples/src/bumperbot_examples/: tf_examples.py
(+1 files in other folders)
